--- a/scss/layouts/_article.scss
+++ b/scss/layouts/_article.scss
@@ -94,10 +94,37 @@ article {
 
 @keyframes rotateAnimation {
     from {
-      transform: rotate(0deg);
+      transform: translateX(0) rotate(0deg);
     }
     to {
-      transform: rotate(-1945deg);
+      transform: translateX(500px) rotate(-2520deg);
+    }
+  }
+
+  @keyframes helicoAnimation {
+    from {
+        transform: translate(500px, 0) rotate(0deg);
+    }
+    to { 
+        transform: translate(100px, 400px) rotate(-2520deg);
+    }
+  } 
+
+  @keyframes endAnimation {
+    from {
+        transform: translate(100px, 400px) rotate(0deg);
+    }
+    to {
+        transform: translate(600px, -100px) rotate(-1260deg);
+    }
+  }
+
+  @keyframes tooMuchAnimation {
+    from {
+        transform: translate(600px, -100px) rotate(0deg);
+    }
+    to {
+        transform: translate(600px, 500px) rotate(-1260deg);
     }
   }
 
